src/main/javacc/Tiny.jj
options {
    STATIC = false;
}

PARSER_BEGIN(Tiny)

package com.mycompany.tiny.compiler;

public class Tiny {
}

PARSER_END(Tiny)

SKIP : { " " | "\t" | "\n" | "\r" | < COMMENT: "{" (~["}"])* "}" >}

TOKEN : {
    < IF: "if" >
  | < THEN: "then" >
  | < ELSE: "else" >
  | < END: "end" >
  | < REPEAT: "repeat" >
  | < UNTIL: "until" >
  | < READ: "read" >
  | < WRITE: "write" >
  | < NUM: (["0"-"9"])+ >
  | < ID: ["a"-"z","A"-"Z"] ( ["a"-"z", "A"-"Z", "0"-"9"] )*>
  | < ATRIB: ":=">
  | < SOM: "+">
  | < SUB: "-">
  | < MULT: "*">
  | < DIV: "/">
  | <ABREPARE: "(">
  | <FECHAPARE: ")">
}

void Programa() :
{
}//variáveis locais
{
   <ID> <ATRIB> <NUM> <EOF>
}

void Expressao():
{}
{
  Termo()
  ((<SOM> | <SUB>) Termo())*
}

void Termo():
{}
{
  Fator()
  ((<MULT> | <DIV>) Fator())*
}

void Fator():
{}
{
  <ID> | <NUM>|<ABREPARE> Expressao()<FECHAPARE>
}
